--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "mapbox-gl": "^3.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^6.1.21",
     "react-router-dom": "^7.8.2",
     "three": "^0.180.0"
   },
