--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "mapbox-gl": "^3.15.0",
+    "plotly.js": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^6.1.21",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
