--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@ap.cx/react-fullpage": "^0.3.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "chroma-js": "^3.1.2",
     "framer-motion": "^12.23.12",
+    "geotiff": "^2.1.4-beta.0",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "mapbox-gl": "^3.15.0",
     "plotly.js": "^3.1.0",
+    "rc-slider": "^11.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
