--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ap.cx/react-fullpage": "^0.3.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "chart.js": "^4.5.0",
     "chroma-js": "^3.1.2",
     "framer-motion": "^12.23.12",
     "geotiff": "^2.1.4-beta.0",
@@ -22,6 +23,7 @@
     "plotly.js": "^3.1.0",
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
