--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
+    "@google/earthengine": "^1.6.9",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "chroma-js": "^3.1.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "geotiff": "^2.1.4-beta.0",
+    "google-auth-library": "^10.3.0",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "mapbox-gl": "^3.15.0",
+    "papaparse": "^5.5.3",
     "plotly.js": "^3.1.0",
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
