--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,13 @@
-flask
-flask-cors
-pandas
-numpy
-tensorflow
-joblib
+dash==2.13.0
+dash-bootstrap-components==1.4.1
+dash-leaflet==1.0.15
+pandas==2.2.2
+numpy==1.26.4
 requests==2.31.0
-plotly
+scikit-learn==1.3.2
+xgboost==1.7.6
+joblib==1.3.2
+python-dotenv==1.0.0
+plotly==5.18.0
+shap==0.41.0
+tensorflow==2.13.0
